img margin and W3C rectification

--- a/book.html
+++ b/book.html
@@ -50,7 +50,7 @@
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
     
             <button class="icon_cross_menu imgcross" @click="menuIsOpen = ! menuIsOpen">
-                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="#">
+                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="Icon cross menu">
             </button>
             <h1 class="textmenu">Menu</h1>
             <ul>
@@ -96,7 +96,7 @@
         surrounding the globe. Chlorofluorocarbons (a subclass of fluorinated gases, they are greenhouse gases 
         that degrade the stratospheric ozone layer that protects life on the planet from ultraviolet radiation).
     </p>
-    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="#">
+    <img class="imgmargin" src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="Explanatory image of the atmosphere">
     <p class="text-bottom-img">Explanatory image of the atmosphere</p>
     <h3>Aspects of air pollution</h3>
     <p>
@@ -156,7 +156,7 @@
         there are less greenhouse gas emissions. Fossil fuels should be abandoned even if they are very important 
         for the world population. The alternatives are renewable energies such as solar, wind, hydraulic,... 
     </p>
-    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="Photo with windmills and solar panels.">
+    <img class="imgmargin" src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="Photo with windmills and solar panels.">
     <p class="text-bottom-img">Photo with windmills and solar panels.</p>
     <h3>Here is an extract from the book :</h3>
     <p>Is a book written in French.</p>
