--- a/hopes.html
+++ b/hopes.html
@@ -50,7 +50,7 @@
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
     
             <button class="icon_cross_menu imgcross" @click="menuIsOpen = ! menuIsOpen">
-                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="#">
+                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="icon cross menu">
             </button>
             <h1 class="textmenu">Menu</h1>
             <ul>
@@ -95,7 +95,7 @@
         speaking. In 1981, he announced that he was running for president but quickly withdrew. All this because of 
         threats and pressure.
     </p>
-    <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/photo coluche.webp" alt="Photo of Coluche in black and white with the logo 'Les Restaurants du coeur' in the bottom right corner of  the picture.">
+    <img class="imgmargin" src="public/img/page espoir/tinify-2022-11-15T14_17_49/photo coluche.webp" alt="Photo of Coluche in black and white with the logo 'Les Restaurants du coeur' in the bottom right corner of  the picture.">
     <p class="text-bottom-img">
         Photo of Coluche in black and white with the logo "Les Restaurants du coeur" in the bottom right corner of 
         the picture.
@@ -110,7 +110,7 @@
         Coluche died in 1986, very quickly after the creation of his association, but this association has become a 
         monument in France. 
     </p>
-    <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/resto du coeur.webp" alt="Image of the logo 'Les restaurants du coeur'.">
+    <img class="imgmargin" src="public/img/page espoir/tinify-2022-11-15T14_17_49/resto du coeur.webp" alt="Image of the logo 'Les restaurants du coeur'.">
     <p class="text-bottom-img">Image of the logo "Les restaurants du coeur".</p>
     <h3>Other types of aid ?</h3>
     <p>
