--- a/indexGB.html
+++ b/indexGB.html
@@ -76,7 +76,7 @@
     </header>
 
     <h1>Denunciation of the current world</h1>
-    <img class="image_accueil" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/image accueil.webp" alt="">
+    <img class="image_accueil" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/image accueil.webp" alt="Image to represents the Denunciation of the current world ">
            <p>
             Here are the different articles which all coincide on one and the same theme, the distresses of the 
             present world. 
@@ -86,7 +86,7 @@
 
 
     <h2>An interesting music</h2> 
-    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/Hakai Img Akuma Album.webp" alt="#">  
+    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/Hakai Img Akuma Album.webp" alt="Image of the album of Hakai">  
     <div class="col-size">
         <br>
         <p class="text-accueil">
@@ -101,7 +101,7 @@
 
 
     <h2>The book for the environment</h2>   
-    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/Livre APPA.webp" alt="#">
+    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/Livre APPA.webp" alt="Logo of the company APPA">
     <div class="col-size">
         <br>
         <p class="text-accueil">
@@ -116,7 +116,7 @@
 
 
     <h2>The Series that sums it all up</h2>   
-    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/OnePiece.webp" alt="#">
+    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/OnePiece.webp" alt="Drawing of One Piece">
     <div class="col-size">
         <br>
         <p class="text-accueil">
@@ -131,7 +131,7 @@
 
 
     <h2>Most unequal place in the world</h2>   
-    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/InégalitéAfrDuSud.webp" alt="#">
+    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/InégalitéAfrDuSud.webp" alt="Image represent of unequal repartition in south africa ">
     <div class="col-size">
         <br>
     <p class="text-accueil">
@@ -146,7 +146,7 @@
 
 
     <h2>A great hope for the world</h2>
-    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/AidesHumanitaires.webp" alt="#">
+    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/AidesHumanitaires.webp" alt="Image of the association to help the people">
     <div class="col-size">
         <br>
     <p class="text-accueil">
@@ -162,7 +162,7 @@
 
 
     <h2>A regret of this generation</h2>
-    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/MauvaisAccèsRessouces.webp" alt="#">
+    <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/MauvaisAccèsRessouces.webp" alt="Image of the inequality in the world of food">
     <div class="col-size">
         <br>
     <p class="text-accueil">
