--- a/music.html
+++ b/music.html
@@ -145,11 +145,11 @@
         Ils m'disent tous : "C'est hela", des notifs sur mon tel
         Business si t'appelles, parle business si t'appelles..
     </p>
-    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip sky.webp" alt="Image from a scene in Hakai's Sky clip">
+    <img class="imgmargin" src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip sky.webp" alt="Image from a scene in Hakai's Sky clip">
     <p class="text-bottom-img">Image from a scene in Hakai's Sky clip</p>
 
     <h3>Listen to music</h3>
-    <a href="https://www.youtube.com/watch?v=ymkgg-b5Dq4"><img src="public/icon/tinify-2022-11-16T10_17_52/musique link.webp" alt="#"></a>
+    <a href="https://www.youtube.com/watch?v=ymkgg-b5Dq4"><img  class="imgmargin1" src="public/icon/tinify-2022-11-16T10_17_52/musique link.webp" alt="link of the music"></a>
 
     <h3>What it means to make music</h3>
     <p>
@@ -166,7 +166,7 @@
         kind of like to hurt themselves hence the word 'maso' which means masochist. It shows that he starts 
         working when he knows how much he will earn before he starts.
     </p>
-    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai rouge et noir.webp" alt="Image of the artist Hakai in a dark red and black atmosphere">
+    <img class="imgmargin" src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai rouge et noir.webp" alt="Image of the artist Hakai in a dark red and black atmosphere">
     <p class="text-bottom-img">Image of the artist Hakai in a dark red and black atmosphere</p>
     <p>    
         It shows us that the trend is only changing and very quickly. It can change overnight. One day you'll have the glory and overnight it can all fall apart.
@@ -191,7 +191,7 @@
         have enough it's hard to live, whether it's food or even indulging in consumption so it's almost impossible to survive 
         if you don't have any. 
     </p>
-    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip lune.webp" alt="Photo of a scene from in Hakai's Lune clip Lune">
+    <img class="imgmargin" src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip lune.webp" alt="Photo of a scene from in Hakai's Lune clip Lune">
     <p class="text-bottom-img">Photo of a scene from in Hakai's Lune clip Lune</p>
 
     <p>
