--- a/page_espoir.html
+++ b/page_espoir.html
@@ -55,7 +55,7 @@
             <h1 class="textmenu">Menu</h1>
             <ul>
                 <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li>
                 <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li>
                 <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li>
                 <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li>
@@ -96,7 +96,8 @@
         qu'il candidate pour les élections présidentielles mais se retire rapidement. 
         Tout cela à cause des menaces et des pressions.
     </p>
-    <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/photo coluche.webp" alt="#">
+    <img class="imgmargin" src="public/img/page espoir/tinify-2022-11-15T14_17_49/photo coluche.webp" alt="Photo de Coluche en noir et blanc avec le logo ''Les Restaurants du coeur''
+    en bas à droite de l'image.">
     <p class="text-bottom-img">
         Photo de Coluche en noir et blanc avec le logo "Les Restaurants du coeur"
         en bas à droite de l'image.
@@ -112,7 +113,7 @@
         et d'autres aides plus ou moins importantes. Coluche décède en 1986, très rapidement après 
         la création de son association mais cette association est devenue un monument en France. 
     </p>
-    <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/resto du coeur.webp" alt="#">
+    <img class="imgmargin" src="public/img/page espoir/tinify-2022-11-15T14_17_49/resto du coeur.webp" alt="Image du logo ''Les restaurants du coeur''.">
     <p class="text-bottom-img">Image du logo "Les restaurants du coeur".</p>
     <h3>Les autres types d'aides ? </h3>
     <p>
