--- a/page_livre.html
+++ b/page_livre.html
@@ -55,7 +55,7 @@
             <h1 class="textmenu">Menu</h1>
             <ul>
                 <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li>
                 <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li>
                 <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li>
                 <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li>
@@ -98,7 +98,7 @@
         de gaz fluorés, c'est des gaz à effet de serre qui dégradent la couche stratosphérique d'ozone qui 
         protège le vie sur la planète et sur les ultraviolets).
     </p>
-    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="Image explicative de l'atmosphère.">
+    <img class="imgmargin" src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="Image explicative de l'atmosphère.">
     <p class="text-bottom-img">Image explicative de l'atmosphère.</p>
     <h3>Les aspect de la pollution atmosphérique</h3>
     <p>
@@ -163,7 +163,7 @@
         si elles sont très importantes au sein de la population mondiale. Les alternatives sont les donc les énergies renouvelables 
         comme les énergies solaire, éolienne, hydraulique,… 
     </p>
-    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="Photo avec des éoliennes et des panneaux solaires.">
+    <img class="imgmargin" src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="Photo avec des éoliennes et des panneaux solaires.">
     <p class="text-bottom-img">Photo avec des éoliennes et des panneaux solaires.</p>
     <h3>Voici un extrait du Livre :</h3>
     <p>
