--- a/page_musique.html
+++ b/page_musique.html
@@ -145,12 +145,12 @@
         Ils m'disent tous : "C'est hela", des notifs sur mon tel
         Business si t'appelles, parle business si t'appelles..
     </p>
-    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip sky.webp" alt="#">
+    <img class="imgmargin" src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip sky.webp" alt="Image d'une scène du clip Sky de Hakai">
     <p class="text-bottom-img">Image d'une scène du clip Sky de Hakai</p>
 
     <h3>Écouter la musique</h3>
 
-    <a href="https://www.youtube.com/watch?v=ymkgg-b5Dq4"><img src="public/icon/tinify-2022-11-16T10_17_52/musique link.webp" alt="#"></a>
+    <a href="https://www.youtube.com/watch?v=ymkgg-b5Dq4"><img class="imgmargin1" src="public/icon/tinify-2022-11-16T10_17_52/musique link.webp" alt="lien de la musique"></a>
 
     <h3>Ce qu'il resort de la musique</h3>
     <p>
@@ -166,7 +166,7 @@
         personnes aime en quelque sorte ce faire du mal d'où le mot maso' qui veut dire masochiste. Cela montre qu'il 
         commence à travailler lorsqu'il sait le montant qu'il gagnera avant de s'y mettre.
     </p>
-    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai rouge et noir.webp" alt="#">
+    <img class="imgmargin" src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai rouge et noir.webp" alt="Image de l'artiste Hakai dans avec une ambiance de rouge sombre et de noir.">
     <p class="text-bottom-img">Image de l'artiste Hakai dans avec une ambiance de rouge sombre et de noir.</p>
     <p>    
         Il nous montre que la tendance ne fait que de changer et très rapidement. Elle peut changer du jour au lendemain.
@@ -194,7 +194,7 @@
         l'argent. Le monde ne fonctionne qu'avec cela et si tu n'en a pas assez c'est compliqué de vivre, que cela soit 
         alimentairement ou même en se faisant plaisir en consommant c'est donc quasiment impossible de survivre si tu n'en a pas. 
     </p>
-    <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip lune.webp" alt="#">
+    <img class="imgmargin" src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip lune.webp" alt="Photo d'une scène du clip Lune de Hakai">
     <p class="text-bottom-img">Photo d'une scène du clip Lune de Hakai</p>
 
     <p>
