--- a/page_regret.html
+++ b/page_regret.html
@@ -55,7 +55,7 @@
             <h1 class="textmenu">Menu</h1>
             <ul>
                 <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li>
                 <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li>
                 <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li>
                 <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li>
@@ -97,7 +97,7 @@
         Extrêmement de personnes  qui décèdent surtout en Somalie, Ethiopie et au Kenya, 
         1.7 millions d'enfants sont sous-alimentés gravement. 
     </p>
-    <img src="public/img/page regret/tinify-2022-11-15T14_28_2/enfant malnutrition.webp" alt="#">
+    <img class="imgmargin" src="public/img/page regret/tinify-2022-11-15T14_28_2/enfant malnutrition.webp" alt="Image d'un enfant en sous alimentation, très maigre avec un visage plein de détresse et de fatigue.">
     <p class="text-bottom-img">Image d'un enfant en sous alimentation, très maigre avec un visage plein de détresse et de fatigue.</p>
     <h3>La crise n'a rien arrangé</h3>
     <p>
@@ -118,7 +118,7 @@
         utilisons pour ensuite, essayer de transférer de l'eau aux pays qui en ont le plus besoin. 
         En essayant de trouver des stratégies pour y parvenir. 
     </p>
-    <img src="public/img/page regret/tinify-2022-11-15T14_28_2/image-removebg-preview (8) 1.webp" alt="#">
+    <img class="imgmargin" src="public/img/page regret/tinify-2022-11-15T14_28_2/image-removebg-preview (8) 1.webp" alt="Dessin qui représente la planète qui est un robinet ouvert et que l'eau de planète disparait peu à peu. ">
     <p class="text-bottom-img">Dessin qui représente la planète qui est un robinet ouvert et que l'eau de planète disparait peu à peu. </p>
 
 
