--- a/page_serie.html
+++ b/page_serie.html
@@ -55,7 +55,7 @@
             <h1 class="textmenu">Menu</h1>
             <ul>
                 <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li>
                 <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li>
                 <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li>
                 <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li>
@@ -80,7 +80,7 @@
         Nous allons voir ce que Oda a insinué dans son œuvre. Il fait pas mal d'allusions 
         cachés ce qui fait son style intrigant et intéressant de l'œuvre.
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp" class="opseries" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp" class="opseries" alt="Logo One Piece">
     <p class="text-bottom-img">Logo One Piece</p>
     <p>
         One Piece à été choisi car il y a pas accès au même ressources et aussi les problèmes 
@@ -114,7 +114,7 @@
         dans les eaux pollués et donc la population souffrent beaucoup de maladie due au bactéries de 
         l'alimentation et de l'eau. 
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/wano.webp" alt="#">
+    <img class="imgmargin" src="public/img/page série/tinify-2022-11-15T14_48_17/wano.webp" alt="Image de pollution atmosphérique dans la série One Piece.">
     <p class="text-bottom-img">Image de pollution atmosphérique dans la série One Piece.</p>
     <h3>La défense d'autres intérêts</h3>
     <p>
@@ -124,7 +124,7 @@
         qui sont les dragons célestes. Ils utilisent les hommes poissons comme des esclaves, et même aucun 
         humain ne doit lever la main ou mal parler a un dragons célestes sinon il se fait tuer sur le champ. 
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/hp.webp" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/hp.webp" alt="Image de différents homme poisson de la série One Piece.">
     <p class="text-bottom-img">Image de différents homme poisson de la série One Piece.</p>
     <h3>En conclusion de cette article</h3>
     <p>
@@ -133,7 +133,7 @@
         Il y a beaucoup de problèmes écologiques. 
         Hormis les problèmes écologiques Oda, a insinué énormément de choses dans son œuvre et il serait impossible de tout retranscrire dans cet article.
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" class="opchap" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" class="opchap" alt="Logo de l'équipage principal de One Piece, nommé les chapeaux de paille.">
     <p class="text-bottom-img">Logo de l'équipage principal de One Piece, nommé les chapeaux de paille.</p>
     <h3>Nous allons voir maintenant la filmographie de Eiichirō Oda</h3>
     <p>
@@ -141,13 +141,13 @@
         Il ne ressortira plus rien après One Piece, d'après lui car il consacre toute sa vie et cela fait 
         plus de 23 ans qu'il publie chaque semaine 1 épisode. Mais, il a publié des films, les voici.
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" class="opserie" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" class="opserie" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" class="opserie" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" class="opserie" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" class="opserie" alt="Couverture des 4 films les plus vendu de Oda.">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" class="opserie" alt="Couverture des 4 films les plus vendu de Oda.">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" class="opserie" alt="Couverture des 4 films les plus vendu de Oda.">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" class="opserie" alt="Couverture des 4 films les plus vendu de Oda.">
     <p>Couverture des 4 films les plus vendu de Oda.</p>
     <h3>Regarder le premier épisode de One Piece</h3>
-    <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#"></a>
+    <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="Lien du premier episode de la serie One Piece."></a>
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
