--- a/place.html
+++ b/place.html
@@ -113,7 +113,7 @@
         mainly the black population, and others suffer from obesity because they have access to unhealthy resources, 
         which are too expensive and difficult to access for the majority of the country's population.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="Photo of a slum in South Africa, you can feel the misery through this photo.">
+    <img class="imgmargin" src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="Photo of a slum in South Africa, you can feel the misery through this photo.">
     <p class="text-bottom-img">Photo of a slum in South Africa, you can feel the misery through this photo.</p>
     <h3>To conclude</h3>
     <p>
@@ -123,7 +123,7 @@
         most important thing because many people die of malnutrition and diseases due to bacteria linked to drinking water which is 
         difficult to access for different families.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise GB.webp" alt="Timeline of the 9 most unequal countries in the world, led by South Africa.">
+    <img class="imgmargin" src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise GB.webp" alt="Timeline of the 9 most unequal countries in the world, led by South Africa.">
     <p>Timeline of the 9 most unequal countries in the world, led by South Africa.</p>
 
     <footer>
