--- a/regrets.html
+++ b/regrets.html
@@ -90,7 +90,7 @@
         from malnutrition. Then there are other people who are affected but they are few in number in their countries. 
         In Somalia, Ethiopia and Kenya, 1.7 million children are severely malnourished. 
     </p>
-    <img src="public/img/page regret/tinify-2022-11-15T14_28_2/enfant malnutrition.webp" alt="#">
+    <img class="imgmargin" src="public/img/page regret/tinify-2022-11-15T14_28_2/enfant malnutrition.webp" alt="Picture of an undernourished child, very thin with a face of distress and fatigue.">
     <p class="text-bottom-img">Picture of an undernourished child, very thin with a face of distress and fatigue.</p>
     <h3>The crisis has not helped</h3>
     <p>
@@ -109,7 +109,7 @@
         wasting all the water we use and try to transfer water to the countries that need it most. Trying to find 
         strategies to do this. 
     </p>
-    <img src="public/img/page regret/tinify-2022-11-15T14_28_2/image-removebg-preview (8) 1.webp" alt="#">
+    <img class="imgmargin" src="public/img/page regret/tinify-2022-11-15T14_28_2/image-removebg-preview (8) 1.webp" alt="Drawing that represents the planet that is an open tap and that the water of the planet is disappearing little by little.">
     <p class="text-bottom-img">Drawing that represents the planet that is an open tap and that the water of the planet is disappearing little by little.</p>
 
 
