--- a/glossaire.html
+++ b/glossaire.html
@@ -56,7 +56,7 @@
             <h1 class="textmenu">Menu</h1>
             <ul>
                 <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li>
                 <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li>
                 <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li>
                 <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li>
