--- a/page_lieu.html
+++ b/page_lieu.html
@@ -55,7 +55,7 @@
             <h1 class="textmenu">Menu</h1>
             <ul>
                 <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li>
                 <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li>
                 <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li>
                 <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li>
@@ -120,7 +120,7 @@
         ils ont accès aux ressources pas saines, car trop cher et compliqué d'accès pour la majorité de 
         la population du pays.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="Photo d'un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.">
+    <img class="imgmargin" src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="Photo d'un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.">
     <p class="text-bottom-img">Photo d'un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.</p>
     <h3>En conclusion</h3>
     <p>
@@ -131,7 +131,7 @@
         alimentaire qui pour moi est la chose la plus importante car ils sont beaucoup à mourir de malnutrition 
         et de maladies due aux bactéries lié à l'eau potable qui un compliqué d'accès pour différentes familles.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise FR.webp" alt="Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l’Afrique du Sud.">
+    <img class="imgmargin" src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise FR.webp" alt="Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l’Afrique du Sud.">
     <p>Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l'Afrique du Sud.</p>
 
     <footer>
