--- a/series.html
+++ b/series.html
@@ -80,7 +80,7 @@
         We will see what Oda is up to in his work. He makes a lot of hidden 
         allusions which makes his style intriguing and interesting.
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp"  class="opseries" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp"  class="opseries" alt="One Piece logo">
     <p class="text-bottom-img">One Piece logo</p>
     <p>
         One Piece was chosen because of the lack of access to the same resources and also the ecological
@@ -112,7 +112,7 @@
         polluted so it is impossible to plant. The villages eat fish that live in polluted waters and therefore 
         the population suffers a lot of illness due to the bacteria in the food and water.  
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/wano.webp" alt="#">
+    <img class="imgmargin" src="public/img/page série/tinify-2022-11-15T14_48_17/wano.webp" alt="Image of air pollution in the One Piece series">
     <p class="text-bottom-img">Image of air pollution in the One Piece series</p>
     <h3>The defence of other interests</h3>
     <p>
@@ -122,14 +122,14 @@
         They use the fishmen as slaves, and even no human should raise his hand or speak badly to a celestial 
         dragon or he will be killed on the spot. 
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/hp.webp" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/hp.webp" alt="Image of different fish men from the One Piece series.">
     <p class="text-bottom-img">Image of different fish men from the One Piece series.</p>
     <h3>To conclude</h3>
     <p>
         We can see that Eiichirō Oda hates pollution and he is for ecology. This coincides with my book on pollution. 
         Oda is against the access of unequal distribution of food resources. There are many ecological problems. 
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" class="opchap" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" class="opchap" alt="Logo of the main crew of One Piece, called the Straw Hats.">
     <p class="text-bottom-img">Logo of the main crew of One Piece, called the Straw Hats.</p>
     <h3>We will now look at the filmography of Eiichirō Oda</h3>
     <p>
@@ -137,13 +137,13 @@
         He won't release anything after One Piece, according to him because he dedicates all his life and it's been 
         more than 23 years that he publishes every week 1 episode. But he has published films and here they are. 
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" class="opserie" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" class="opserie" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" class="opserie" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" class="opserie" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" class="opserie" alt="Carousel of the 4 best-selling Oda films.">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" class="opserie" alt="Carousel of the 4 best-selling Oda films.">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" class="opserie" alt="Carousel of the 4 best-selling Oda films.">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" class="opserie" alt="Carousel of the 4 best-selling Oda films.">
     <p>Carousel of the 4 best-selling Oda films.</p>
     <h3>Watch the first episode of One Piece</h3>
-    <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#"></a>
+    <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img class="imgmargin1" src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="link of the first episode of One Piece."></a>
 
     <footer>
         <div class="logo__texte_ms">
