--- a/series.html
+++ b/series.html
@@ -50,7 +50,7 @@
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
     
             <button class="icon_cross_menu imgcross" @click="menuIsOpen = ! menuIsOpen">
-                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="#">
+                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="icon cross menu">
             </button>
             <h1 class="textmenu">Menu</h1>
             <ul>
