--- a/book.html
+++ b/book.html
@@ -77,7 +77,7 @@
     <h1>The book for the environment</h1>
 <body>
     <p>
-        We will see what APPA tells us about air pollution. But since the book dates from 1998,
+        We will see what APPA tells us about <a href="./glossary.html">air pollution</a>. But since the book dates from 1998,
         we will look at the trends from that time and compare them with current trends.
     </p>
     <p> 
@@ -93,8 +93,8 @@
     <p>
         We will start by looking at all the information in the book. But before we do that, let's define what the 
         atmosphere is, from the Greek atmos meaning vapour and phaira which is the sphere is the layer of air 
-        surrounding the globe. Chlorofluorocarbons (a subclass of fluorinated gases, they are greenhouse gases 
-        that degrade the stratospheric ozone layer that protects life on the planet from ultraviolet radiation).
+        surrounding the globe. Chlorofluorocarbons (a subclass of <a href="./glossary.html">fluorinated gases</a>, they are <a href="./glossary.html">greenhouse gases</a> 
+        that degrade the stratospheric ozone layer that protects life on the planet from <a href="./glossary.html">ultraviolet radiation</a>).
     </p>
     <img class="imgmargin" src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="Explanatory image of the atmosphere">
     <p class="text-bottom-img">Explanatory image of the atmosphere</p>
