--- a/page_lieu.html
+++ b/page_lieu.html
@@ -96,7 +96,7 @@
     </p>
     <h3>Pour en savoir plus sur les sources de ces inégalités </h3>
     <p>
-        Toute ces inégalités sont due à l'apartheid qui d'après moi persiste encore aujourd'hui, 
+        Toute ces inégalités sont due à <a href="./glossaire.html">l'apartheid</a> qui d'après moi persiste encore aujourd'hui, 
         mais d'une autre manière. La population noire est dominante dans le pays ils détiennent 
         70% de la richesse totale du pays alors qu'ils sont que 10% dans le pays sauf ceux qui 
         sont chômage ne font pas partie de ce pourcentage. Le chômage est de 40% pour les sud-africains 
