--- a/page_livre.html
+++ b/page_livre.html
@@ -81,9 +81,7 @@
         Mais vu que le livre date de 1998, nous allons voir les tendances de 
         cette époque et les comparer avec les tendances actuelles.
     </p>
-    <p> 
-        Le livre qui montre décrit tous les aspects de la pollution atmosphérique.
-    </p>
+    <p> Le livre qui montre décrit tous les aspects de la pollution <a href="./glossaire.html"> atmosphérique.</p></a>
     <h3>Ce qu'il faut savoir du livre</h3>
     <p>
         Dans ce livre, il y a la présentation des sources polluantes, les effets de la pollution 
@@ -95,8 +93,8 @@
         Nous allons commencer par voir toutes les informations du livre. Mais avant cela, nous allons 
         définir ce qu'est l'atmosphère, du grec atomos qui signifie vapeur et sphaira qui est la sphère 
         est la couche d'air entourant le globe terrestre. Les chlorofluorocarbures (c'est une sous-classe 
-        de gaz fluorés, c'est des gaz à effet de serre qui dégradent la couche stratosphérique d'ozone qui 
-        protège le vie sur la planète et sur les ultraviolets).
+        de <a href="./glossaire.html">gaz fluorés</a>, c'est <a href="./glossaire.html">des gaz à effet de serre</a> qui dégradent la couche stratosphérique d'ozone qui 
+        protège le vie sur la planète et sur <a href="./glossaire.html">les ultraviolets</a>).
     </p>
     <img class="imgmargin" src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="Image explicative de l'atmosphère.">
     <p class="text-bottom-img">Image explicative de l'atmosphère.</p>
