--- a/place.html
+++ b/place.html
@@ -93,7 +93,7 @@
     </p>
     <h3>To find out more about the sources of these inequalities</h3>
     <p>
-        All these inequalities are due to apartheid, which I think still persists today, but in a different way. 
+        All these inequalities are due to <a href="./glossary.html">apartheid</a>, which I think still persists today, but in a different way. 
         The black population is dominant in the country, they hold 70% of the total wealth of the country, whereas 
         they are only 10% in the country, except those who are unemployed are not part of this percentage. 
         Unemployment is 40% for black South Africans and 8% for white South Africans, so they are still privileged. 
