site fininsh just w3c validator

--- a/page_serie.html
+++ b/page_serie.html
@@ -147,7 +147,7 @@
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" class="opserie" alt="Couverture des 4 films les plus vendu de Oda.">
     <p>Couverture des 4 films les plus vendu de Oda.</p>
     <h3>Regarder le premier épisode de One Piece</h3>
-    <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="Lien du premier episode de la serie One Piece."></a>
+    <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img class="imgmargin1" src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="Lien du premier episode de la serie One Piece."></a>
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
