project of my classmates TP

--- a/other_project.html
+++ b/other_project.html
@@ -81,14 +81,11 @@
     <a href="https://what-have-we-become.evanmoulin.fr"> <h2 class="coloroth">What have we become ?</h2> <p>( Created by Evan Moulin )</p></a>
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/whathavewebecome.png" alt="Image of the website of Evan Moulin">
         
-    <a href="http://wikipiece.yannisborel.fr"><h2 class="coloroth"> WikiPiece </h2><p>( Created by Yannis Borel )</p></a>
-    <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/wikipiece.png" alt="Image of the website of Yannis Borel">
+    <a href="https://wiwtb18.romane-miguel.fr"><h2 class="coloroth"> What it Was to be Eighteen</h2><p>( Created by Romane Miguel )</p></a>
+    <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/romanemiguel.png" alt="Image of the website of Romane Miguel">
         
-    <a href="http://genocide-cache.thamilselvan.fr"><h2 class="coloroth">Génocide caché </h2><p>( Created by Oliventhan Thamilselvan ) </p></a>
-    <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/genocidecaché.png" alt="Image of the website of Oliventhan Thamilselvan">
-
-    <a href="https://memories.angelo-simoes.fr"><h2 class="coloroth">Memories</h2> <p>( Created by Angelo Simoes )</p></a>
-    <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/memories.png" alt="Image of the website of Angelo Simoes">
+    <a href="https://mind-interest.marionmura.fr/fr/"><h2 class="coloroth">Mind-interest </h2><p>( Created by Marion Mura ) </p></a>
+    <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/marionmura.png" alt="Image of the website of Marion Mura">
 
     <a href="https://vers-un-monde-utopique.albanluc.fr"><h2 class="coloroth"> Vers un monde utopique </h2> <p>( Created by Alban Luc )</p></a>
     <img class="oth" src="./public/img/page d'accueil/tinify-2022-11-15T14_12_8/versunmondeutopique.png" alt="Image of the website of Alban Luc">
